<resources>
    <!--App and Activities-->
    <string name="app_name">ManTracker</string>
    <string name="title_activity_edit_profile">Your Profile</string>
    <string name="title_activity_pateint_list">PateintListActivity</string>
    <string name="title_activity_record_list">RecordListActivity</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_create_account">Create Account</string>
    <string name="title_activity_patient_home">Patient Home</string>
    <string name="title_activity_care_provider">Care Provider Home</string>

    <!--General-->
    <string name="signup">Sign Up</string>
    <string name="user">Username</string>
    <string name="email">Email</string>
    <string name="phone">Phone number</string>
    <string name="care_provider">Care provider</string>
    <string name="patient">Patient</string>

    <string name="action_settings">Settings</string>
    <string name="add_problem">Add New Problem</string>
    <string name="user_greeting"><b>Hello User!</b></string>
    <string name="medical_problems"><b>Medical Problems: </b></string>
    <string name="title_activity_add_record">AddRecordActivity</string>
    <string name="search">Search...</string>
    <string name="profilePicture">Profile Picture</string>
    <string name="contentDescription">Content Description</string>
    <string name="User">User:</string>
    <string name="descriptionHeader">Description:</string>
    <string name="dateHeader">Date:</string>
    <string name="countHeader">Number of Records Logged:</string>
    <string name="titleHeader">Title:</string>
    <string name="commentHeader">Comment:</string>
    <string name="titleInputHint">Add Title Here…</string>
    <string name="commentInputHint">Add Comment Here…</string>
    <string name="descriptionInputHint">Add description Here...</string>
    <string name="selectDate">Set Date</string>
    <string name="save">Save</string>
    <string name="enterDate">Select Date</string>
    <string name="add_patient_prompt">Enter Patient User ID</string>
    <string name="add_patient_title">Add a Patient</string>
    <string name="not_added">Not Added</string>
    <string name="already_added">Already Added</string>
    <string name="added">Added</string>
    <string name="Results">Search Results</string>
    <string name="Problems">Problems</string>
    <string name="Records">Records</string>
    <string name="Username">Username: </string>
    <string name="AddRecord">Add New Record</string>
    <string name="PhoneHeader">Phone: </string>
    <string name="EmailHeader">Email: </string>
    <string name="LoginHeader">Login Code: </string>
    <string name="altLoginHint">Enter Short Code</string>
    <string name="altLoginHeader">Alternate Login: </string>
    <string name="altLoginButton">Alternate Login</string>
    <string name="OR">OR</string>
    <string name="veiwing">Viewing: </string>

    <!--Error Messages-->
    <string name="email_invalid_error">Email not valid</string>
    <string name="phone_invalid_error">Phone not valid</string>
    <string name="username_invalid_error">Username not valid</string>
    <string name="username_taken_error">Username already taken</string>
    <string name="title_activity_google_map">GoogleMapActivity</string>
    <string name="no_username_error">No User With Username</string>

    <string name="username">UserName</string>
    <string name="good_day">Good day,</string>
    <string name="hi">Hi!</string>
    <string name="add_title">Add a title...</string>
    <string name="description">Description:</string>
    <string name="add_description">Add a description</string>
    <string name="title">Title:</string>
    <string name="actor">actor</string>
    <string name="body_location">Body Location</string>
    <string name="SaveBLPhoto">Save</string>
    <string name="camera_BL">Camera</string>
    <string name="gallery_BL">Gallery</string>
    <string name="UploadBLPhotos">Upload Body Photos</string>
    <string name="add_location">Add Location</string>
    <string name="title_activity_record_details">RecordDetailsActivity</string>
    <string name="UploadPhotos">Upload Photos</string>
    <string name="upload_photo_count">Upload Photo Count: </string>
    <string name="tracked_problems">Tracked Problems:</string>
    <string name="label_hint">Label</string>
    <string name="oldBodyPhotos">Select</string>
    <string name="ChooseBodyImage">Select</string>
    <string name="BodyLabel">Label</string>
    <string name="BodyLocationImages">Body Location Images</string>
    <string name="DeleteImageButton">Delete</string>
    <string name="LogOut">Sign Out</string>
    <string name="RecordPhotos">Photos</string>
    <string name="comments">Comments</string>
  
    <!--Toolbar-->
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="enter_your_comment">Enter your comment:</string>
    <string name="add_comment">Add comment</string>
    <string name="local_problems">Locally Stored Problems:</string>
</resources>
