<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlue">

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:onClick="BodyLocationPhotos"
        android:text="@string/UploadBLPhotos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateHeader" />

    <TextView
        android:id="@+id/addNewRecordHeader"
        android:layout_width="254dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="64dp"
        android:text="@string/AddRecord"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        android:text="@string/titleHeader"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/titleInputBox"
        android:layout_width="295dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/descriptionBox"
        android:ems="10"
        android:hint="@string/titleInputHint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/titleHeader"
        app:layout_constraintTop_toBottomOf="@+id/addNewRecordHeader" />

    <TextView
        android:id="@+id/commentHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/descriptionHeader"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleHeader" />

    <EditText
        android:id="@+id/commentInputBox"
        android:layout_width="218dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/descriptionBox"
        android:ems="10"
        android:hint="@string/descriptionInputHint"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/commentHeader"
        app:layout_constraintTop_toBottomOf="@+id/titleInputBox" />

    <TextView
        android:id="@+id/dateHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/dateHeader"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/commentHeader" />

    <TextView
        android:id="@+id/date"
        android:layout_width="162dp"
        android:layout_height="32dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="188dp"
        android:text="user puts date here"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/dateHeader"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dateButton"
        android:layout_width="101dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:background="@color/buttonColor"
        android:text="@string/selectDate"
        app:layout_constraintStart_toEndOf="@+id/date"
        app:layout_constraintTop_toBottomOf="@+id/commentInputBox" />

    <Button
        android:id="@+id/saveRecordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/buttonColor"
        android:onClick="saveRecord"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addLocationButton"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@color/buttonColor"
        android:text="@string/add_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uploadPhotoCount" />

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:background="@color/buttonColor"
        android:onClick="BodyLocationPhotos"
        android:text="@string/UploadBLPhotos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateHeader" />

    <Button
        android:id="@+id/button4"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/buttonColor"
        android:onClick="UploadPhotos"
        android:text="@string/UploadPhotos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/uploadPhotoCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/upload_photo_count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <TextView
        android:id="@+id/uploadPhotoCount1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

</android.support.constraint.ConstraintLayout>