<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/resultsHeader"
        android:layout_width="254dp"
        android:layout_height="43dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/Results"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/problemResultsHeader"
        android:layout_width="95dp"
        android:layout_height="29dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:text="@string/Problems"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ListView
            android:id="@+id/problemResults"
            android:layout_width="386dp"
            android:layout_height="0px"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"
            android:background="@color/grey"
            app:layout_constraintBottom_toTopOf="@+id/recordResultsHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/recordResultsHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/Records"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ListView
            android:id="@+id/recordResults"
            android:layout_width="386dp"
            android:layout_height="0px"
            android:layout_weight="1"
            android:background="@color/grey"/>

    </LinearLayout>



</android.support.constraint.ConstraintLayout>