<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.BodyLocationActivity">


    <Button
        android:id="@+id/bConfirmLocation"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:onClick="SaveButtonClick"
        android:text="@string/SaveBLPhoto"
        app:layout_constraintBaseline_toBaselineOf="@+id/resultsView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/resultsView"
        android:layout_width="236dp"
        android:layout_height="38dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/camera_BL"
        android:layout_width="124dp"
        android:layout_height="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="CameraPhoto"
        android:text="@string/camera_BL"
        app:layout_constraintEnd_toStartOf="@+id/gallery_BL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/gallery_BL"
        android:layout_width="124dp"
        android:layout_height="44dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:onClick="GalleryPhoto"
        android:text="@string/gallery_BL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/camera_BL"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_BL"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camera_BL"
        app:srcCompat="@drawable/avatar" />

    <ImageView
        android:id="@+id/cursor"
        android:layout_width="8dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_BL"
        app:srcCompat="?android:attr/textCursorDrawable" />

</android.support.constraint.ConstraintLayout>